Create new page

--- a/css/main.css
+++ b/css/main.css
@@ -1,36 +1,59 @@
 /* VARIABLES */
 
-:root{
-  /* --main-text-color : #fff; */
-  /* --main-bg-color : #fff; */
+:root {
+  --main-text-color: #2D314D;
+  --secondary-text-color: #9597A5;
+  --main-green-color: #30C88F;
   /* --main-font-size : 16px; */
   /* --main-font-weight : 400; */
   /* --main-line-height : 1.5; */
 }
 
+
+@font-face {
+  font-family: 'Public Sans';
+  font-style: normal;
+  font-weight: 100;
+  src: local(''),
+    url('../fonts/public-sans-v13-latin-100.woff2') format('woff2'),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+    url('../fonts/public-sans-v13-latin-100.woff') format('woff');
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* public-sans-regular - latin */
+@font-face {
+  font-family: 'Public Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local(''),
+    url('../fonts/public-sans-v13-latin-regular.woff2') format('woff2'),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+    url('../fonts/public-sans-v13-latin-regular.woff') format('woff');
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
 /* GENERAL */
 
-html{
+html {
   height: 100%;
   box-sizing: border-box;
 }
 
-img{
+img {
   display: block;
   height: auto;
 }
 
-body{
+body {
   display: flex;
   flex-direction: column;
   height: 100%;
   margin: 0;
   padding: 0;
-  /* font-family: "Roboto", "Arial", sans-serif; */
-  /* font-size: 16px; */
-  /* font-weight: 400; */
-  /* line-height: var(--main-line-height); */
+  font-family: "Public Sans", "Arial", sans-serif;
 }
+
 
 
 .visually-hidden {
@@ -48,8 +71,8 @@ body{
 
 /* CONTAINER */
 
-.container{
-  /* max-width: your-size-here; */
+.container {
+  max-width: 1150px;
   margin-right: auto;
   margin-left: auto;
   padding-right: 20px;
@@ -57,8 +80,134 @@ body{
 }
 
 /* STICKY-FOOTER */
-.site-main{
+.site-main {
   flex-grow: 1;
 }
 
+ul,
+ol {
+  margin: 0;
+  padding-right: 0;
+  list-style: none;
+}
 
+.site-header {
+  z-index: 1;
+  padding: 18px  0;
+  background-color: #FFFFFF;
+}
+
+.site-header__box {
+  display: flex;
+  align-items: center;
+}
+
+.site-header__logo {
+  margin-right: auto;
+}
+
+.site-nav__list {
+  
+  display: flex;
+}
+
+.site-nav__item {
+
+  margin-right: 30px;
+
+}
+
+.site-nav__item:hover .site-nav__link {
+  color: black;
+  border-color: #30C88F;
+  transition: all 0.3s ease-in-out;
+}
+
+.site-nav__link {
+  padding-bottom: 28px;
+  border-bottom: 4px solid;
+  border-color: transparent;
+  transition: all 0.3s ease-in-out;
+}
+
+.site-nav__item:last-child {
+  margin-right: 0;
+}
+
+.site-nav__link {
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: -0.107692px;
+  text-decoration: none;
+  color: var(--secondary-text-color);
+}
+
+.site-header__invite {
+  margin-left: auto;
+}
+
+.site-header__link,
+.hero-box__link {
+  display: inline-block;
+  padding: 8px 36px 8px 33px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 28px;
+  color: #FFFFFF;
+  text-decoration: none;
+  background-image: linear-gradient(135deg, #33D35E 0%, #2AB6D9 99.58%);
+  border-radius: 22px;
+}
+
+.site-header__link:hover,
+.hero-box__link:hover {
+  opacity: 0.7;
+}
+
+
+.hero {
+  position: relative;
+  padding: 170px 0;
+  background-color: #F2F2F2;
+}
+
+.hero::after{
+  position: absolute;
+  width: 1371px;
+  height: 1038px;
+  top: calc(50% - 580px);
+  left: calc(50% - 85px);
+  content: "";
+  background-image: url("../images/back-img.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+
+.hero-box {
+  width: 447px;
+}
+
+.hero-box__title {
+  margin: 0;
+  margin-bottom: 24px;
+  font-weight: 100;
+  font-size: 56px;
+  line-height: 64px;
+  letter-spacing: -1px;
+  color: var(--main-text-color);
+}
+
+.hero-box__text {
+  margin: 0;
+  margin-bottom: 36px;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: -0.28125px;
+  color: var(--secondary-text-color);
+}
+
+.choose{
+  background-color: #F4F5F7;
+  padding: 300px 0;
+}
