--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 14 version
+*/
+
 /* VARIABLES */
 
 :root {
@@ -49,7 +56,8 @@
 
 html {
   height: 100%;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 img {
@@ -58,8 +66,13 @@ img {
 }
 
 body {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   height: 100%;
   margin: 0;
   padding: 0;
@@ -77,7 +90,8 @@ body {
   padding: 0;
   border: 0;
   white-space: nowrap;
-  clip-path: inset(100%);
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
@@ -94,7 +108,9 @@ body {
 
 /* STICKY-FOOTER */
 .site-main {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 ul,
@@ -114,9 +130,15 @@ ol {
 }
 
 .site-header__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .site-nav {
@@ -124,6 +146,8 @@ ol {
 }
 
 .site-nav__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -139,6 +163,8 @@ ol {
   position: relative;
   display: inline-block;
   padding: 30px 0;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
 
@@ -150,12 +176,18 @@ ol {
   height: 4px;
   width: 100%;
   pointer-events: none;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
 
 .site-nav__link:hover.site-nav__link::after {
 
+  background-image: -o-linear-gradient(315deg, #33D35E 0%, #2AB6D9 99.58%);
+
   background-image: linear-gradient(135deg, #33D35E 0%, #2AB6D9 99.58%);
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
 
@@ -183,6 +215,7 @@ ol {
   line-height: 28px;
   color: #FFFFFF;
   text-decoration: none;
+  background-image: -o-linear-gradient(315deg, #33D35E 0%, #2AB6D9 99.58%);
   background-image: linear-gradient(135deg, #33D35E 0%, #2AB6D9 99.58%);
   border-radius: 22px;
 }
@@ -262,6 +295,8 @@ ol {
 
 
 .why__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -328,6 +363,8 @@ ol {
 }
 
 .article__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -386,12 +423,16 @@ ol {
   letter-spacing: -0.285714px;
   text-decoration: none;
   color: var(--main-text-color);
+  -webkit-transition: color 0.2s ease-in-out;
+  -o-transition: color 0.2s ease-in-out;
   transition: color 0.2s ease-in-out;
 }
 
 .article__link:hover,
 .wrapper-link:hover {
   color: var(--main-green-color);
+  -webkit-transition: color 0.2s ease-in-out;
+  -o-transition: color 0.2s ease-in-out;
   transition: color 0.2s ease-in-out;
 }
 
@@ -407,7 +448,16 @@ ol {
   background-color: var(--main-text-color);
 }
 
+.footer-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  align-items: center;
+}
+
 .footer-wrapper-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-top: 55px;
 }
@@ -418,24 +468,28 @@ ol {
 
 .footer-wrapper-link {
   color: #fff;
+  -webkit-transition: color 0.2s ease-out;
+  -o-transition: color 0.2s ease-out;
   transition: color 0.2s ease-out;
 }
 
 .footer-wrapper-link:hover {
   color: var(--main-green-color);
+  -webkit-transition: color 0.2s ease-out;
+  -o-transition: color 0.2s ease-out;
   transition: color 0.2s ease-out;
 }
 
 
-.footer-wrapper {
-  display: flex;
-}
+
 
 .footer-wrapper__left {
   margin-right: 130px;
 }
 
 .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -453,6 +507,8 @@ ol {
   line-height: 26px;
   letter-spacing: -0.234375px;
   color: #FFFFFF;
+  -webkit-transition: color 0.2s ease-in-out;
+  -o-transition: color 0.2s ease-in-out;
   transition: color 0.2s ease-in-out;
 }
 
